# FileForge

./: .eslintrc.json  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROJECT_SUMMARY.md  PUBLISH.md  README.md  SOLUTION_SUMMARY.md  demo-real.html  demo.html  example-usage.js  jest.config.js  package-lock.json  package.json  test-real-conversion.js  tsconfig.json
api-converted/: plugin-uppercase.txt
api-converted/batch/: test-document.html
converted-files/: converted-data.csv  converted-document.html
examples/: README.md  basic-usage.js  basic-usage.py
python/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
python/fileforge/: __init__.py  cli.py
python/fileforge/core/: fileforge.py  types.py
src/: index.ts
src/cli/: index.ts
src/core/: FileForge.ts  Plugin.ts  PluginManager.ts  types.ts
src/plugins/: ArchivePlugin.ts  AudioPlugin.ts  DataPlugin.ts  DocumentPlugin.ts  ImagePlugin.ts  VideoPlugin.ts  index.ts
src/types/: external.d.ts
src/utils/: FileUtils.ts  MetadataExtractor.ts  StreamProcessor.ts
